# ntscope

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  find_native.cpp  list_syscalls.cpp
include/ntscope/: expected.hpp  export_table.hpp  module.hpp  native_function.hpp  ntscope.hpp  pe.hpp  syscall_table.hpp
tests/: CMakeLists.txt  smoke.cpp
